added navbar to news template

--- a/index_news.html
+++ b/index_news.html
@@ -7,13 +7,16 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Tech Mag template project">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="css/css_news/bootstrap-4.1.2/bootstrap.min.css">
-<link href="plugins/plugin_news/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="plugins/plugin_news/OwlCarousel2-2.2.1/owl.carousel.css">
-<link rel="stylesheet" type="text/css" href="plugins/plugin_news/OwlCarousel2-2.2.1/owl.theme.default.css">
-<link rel="stylesheet" type="text/css" href="plugins/plugin_news/OwlCarousel2-2.2.1/animate.css">
-<link rel="stylesheet" type="text/css" href="css/css_news/main_styles.css">
-<link rel="stylesheet" type="text/css" href="css/css_news/responsive.css">
+  <link rel="stylesheet" type="text/css" href="css/css_news/bootstrap-4.1.2/bootstrap.min.css">
+  <link href="plugins/plugin_news/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="plugins/plugin_news/OwlCarousel2-2.2.1/owl.carousel.css">
+  <link rel="stylesheet" type="text/css" href="plugins/plugin_news/OwlCarousel2-2.2.1/owl.theme.default.css">
+  <link rel="stylesheet" type="text/css" href="plugins/plugin_news/OwlCarousel2-2.2.1/animate.css">
+<!-- main css -->
+  <link rel="stylesheet" type="text/css" href="css/css_news/main_styles.css">
+  <link rel="stylesheet" type="text/css" href="css/css_news/responsive.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
 
@@ -103,7 +106,7 @@
 									<div class="post_item post_v_small d-flex flex-column align-items-start justify-content-start">
 										<div class="post_image"><img src="img/images_news/post_2.jpg" alt="https://unsplash.com/@lloydaleveque"></div>
 										<div class="post_content">
-											<div class="post_category cat_world"><a href="category.html">world</a></div>
+											<div class="post_category cat_world"><a href="#">world</a></div>
 											<div class="post_title"><a href="single_news.html">The devices of the future</a></div>
 											<div class="post_info d-flex flex-row align-items-center justify-content-start">
 												<div class="post_author d-flex flex-row align-items-center justify-content-start">
@@ -119,7 +122,7 @@
 									<div class="post_item post_v_small d-flex flex-column align-items-start justify-content-start">
 										<div class="post_image"><img src="img/images_news/post_3.jpg" alt="https://unsplash.com/@agkdesign"></div>
 										<div class="post_content">
-											<div class="post_category cat_world"><a href="category.html">world</a></div>
+											<div class="post_category cat_world"><a href="#">world</a></div>
 											<div class="post_title"><a href="single_news.html">The devices of the future</a></div>
 											<div class="post_info d-flex flex-row align-items-center justify-content-start">
 												<div class="post_author d-flex flex-row align-items-center justify-content-start">
@@ -155,7 +158,7 @@
 										</div>
 										<div class="col-lg-7">
 											<div class="post_content">
-												<div class="post_category cat_technology"><a href="category.html">technology</a></div>
+												<div class="post_category cat_technology"><a href="#">technology</a></div>
 												<div class="post_title"><a href="single_news.html">The new Apple release ceremony</a></div>
 												<div class="post_info d-flex flex-row align-items-center justify-content-start">
 													<div class="post_author d-flex flex-row align-items-center justify-content-start">
@@ -181,7 +184,7 @@
 										</div>
 										<div class="col-lg-7">
 											<div class="post_content">
-												<div class="post_category cat_world"><a href="category.html">world</a></div>
+												<div class="post_category cat_world"><a href="#">world</a></div>
 												<div class="post_title"><a href="single_news.html">The new Apple release ceremony</a></div>
 												<div class="post_info d-flex flex-row align-items-center justify-content-start">
 													<div class="post_author d-flex flex-row align-items-center justify-content-start">
@@ -207,7 +210,7 @@
 										</div>
 										<div class="col-lg-7">
 											<div class="post_content">
-												<div class="post_category cat_world"><a href="category.html">world</a></div>
+												<div class="post_category cat_world"><a href="#">world</a></div>
 												<div class="post_title"><a href="single_news.html">New HTML5 Codes - Freebies</a></div>
 												<div class="post_info d-flex flex-row align-items-center justify-content-start">
 													<div class="post_author d-flex flex-row align-items-center justify-content-start">
@@ -247,7 +250,7 @@
 											<div class="post_item post_v_med d-flex flex-column align-items-start justify-content-start">
 												<div class="post_image"><img src="img/images_news/post_4.jpg" alt="https://unsplash.com/@oria_hector"></div>
 												<div class="post_content">
-													<div class="post_category cat_technology"><a href="category.html">technology</a></div>
+													<div class="post_category cat_technology"><a href="#">technology</a></div>
 													<div class="post_title"><a href="single_news.html">Keep up with the tech</a></div>
 													<div class="post_info d-flex flex-row align-items-center justify-content-start">
 														<div class="post_author d-flex flex-row align-items-center justify-content-start">
@@ -269,7 +272,7 @@
 											<div class="post_item post_v_med d-flex flex-column align-items-start justify-content-start">
 												<div class="post_image"><img src="img/images_news/post_5.jpg" alt="https://unsplash.com/@mattyfours"></div>
 												<div class="post_content">
-													<div class="post_category cat_technology"><a href="category.html">technology</a></div>
+													<div class="post_category cat_technology"><a href="#">technology</a></div>
 													<div class="post_title"><a href="single_news.html">Keep up with the tech</a></div>
 													<div class="post_info d-flex flex-row align-items-center justify-content-start">
 														<div class="post_author d-flex flex-row align-items-center justify-content-start">
@@ -298,8 +301,7 @@
 					</div>
 				</div>
 
-				<!-- Sidebar -->
-				<!--================ start footer Area  =================-->
+	<!--================ start footer Area  =================-->
 				<footer class="footer-area">
 						<div class="container">
 								<div class="row">
