--- a/single_news.html
+++ b/single_news.html
@@ -7,10 +7,13 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="description" content="Tech Mag template project">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="css/css_news/bootstrap-4.1.2/bootstrap.min.css">
-<link href="plugins/plugin_news/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="css/css_news/news_style.css">
-<link rel="stylesheet" type="text/css" href="css/css_news/single_responsive.css">
+  <link rel="stylesheet" type="text/css" href="css/css_news/bootstrap-4.1.2/bootstrap.min.css">
+  <link href="plugins/plugin_news/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<!-- main css -->
+  <link rel="stylesheet" type="text/css" href="css/css_news/news_style.css">
+  <link rel="stylesheet" type="text/css" href="css/css_news/single_responsive.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
 	<!--================Header Menu Area =================-->
@@ -56,7 +59,7 @@
 						<div class="post_image"><img src="img/images_news/single.jpg" alt="https://unsplash.com/@cgower"></div>
 
 				<div class="post_content">
-						<div class="post_category cat_technology"><a href="category.html">technology</a></div>
+						<div class="post_category cat_technology"><a href="#">technology</a></div>
 						<div class="post_title"><a href="single_news.html">The new Apple release ceremony</a></div>
 							<div class="post_info d-flex flex-row align-items-center justify-content-start">
 								 <div class="post_author d-flex flex-row align-items-center justify-content-start">
