--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
         <header class="header_area">
 			<div class="main_menu">
 				<nav class="navbar navbar-expand-lg navbar-light">
+          <a id="info_sharenav" href="index.html">INFOSHARE</a>
 					<div class="container">
 						<div class="collapse navbar-collapse offset" id="navbarSupportedContent">
 							<ul class="nav navbar-nav menu_nav">
 								<li class="nav-item"><a class="nav-link" href="index.html">Blog</a></li>
 								<li class="nav-item"><a class="nav-link" href="index_news.html">News</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Article</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Q&A</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Network</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Inbox</a></li>
 								<li class="nav-item"><a class="nav-link" href="#">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 							</ul>
