--- a/single-blog.html
+++ b/single-blog.html
@@ -26,6 +26,7 @@
         <header class="header_area">
             <div class="main_menu">
                 <nav class="navbar navbar-expand-lg navbar-light">
+                    <a id="info_sharenav" href="index.html">INFOSHARE</a>
                     <div class="container">
                         <!-- Brand and toggle get grouped for better mobile display -->
                         <a class="navbar-brand logo_h" href="index.html"><img src="img/logo.png" alt=""></a>
@@ -39,12 +40,10 @@
                             <ul class="nav navbar-nav menu_nav">
                                 <li class="nav-item"><a class="nav-link" href="index.html">Blog</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">News</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">Article</a></li>
-
-                                        <li class="nav-item"><a class="nav-link" href="#">Q&A</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-
-
+                                <li class="nav-item"><a class="nav-link" href="#">Q&A</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Network</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Inbox</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                             </ul>
                         </div>
