--- a/single_news.html
+++ b/single_news.html
@@ -9,6 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/css_news/bootstrap-4.1.2/bootstrap.min.css">
   <link href="plugins/plugin_news/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
 <!-- main css -->
   <link rel="stylesheet" type="text/css" href="css/css_news/news_style.css">
   <link rel="stylesheet" type="text/css" href="css/css_news/single_responsive.css">
@@ -68,7 +69,7 @@
 								<div class="post_date"><a href="#">29 April 2018</a></div>
 								<div class="post_comments_num ml-auto"><a href="#">3 comments</a></div>
 							</div>
-							<div class="post_text">
+							<div class="blog_text">
 								<p>Curabitur venenatis efficitur lorem sed tempor. Integer aliquet tempor cursus. Nullam vestibulum convallis risus vel condimentum. Nullam auctor lorem in libero luctus, vel volutpat quam tincidunt. Nullam vestibulum convallis risus vel condimentum. Nullam auctor lorem in libero.</p>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi convallis metus purus, eget imperdiet ipsum viverra et. Quisque mattis ullamcorper ultricies. Nullam dui dui, porta non vulputate sed, rutrum in ipsum. Quisque nunc velit, feugiat sed mattis a, luctus ac nisl. Praesent pellentesque sapien efficitur, elementum mi sit amet, rutrum mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam venenatis mi ac enim mattis vehicula. Integer sit amet ornare quam. Nullam ultrices tempus felis, eget efficitur neque mollis in. Proin congue maximus augue eget scelerisque. Sed fermentum dolor orci, vestibulum vehicula dolor porta sit amet. Morbi cursus ante sed felis luctus semper. Phasellus sed orci mattis, rhoncus arcu ut, vehicula orci. Curabitur sagittis ante vitae egestas tincidunt.</p>
 								<p>Pellentesque in mauris lacinia sem pharetra cursus. Cras a turpis tortor. Nullam vestibulum, velit vitae mattis ultricies, dui est tempor nibh, quis maximus tortor diam vel justo. Ut nec fermentum nisl. Ut mattis massa ullamcorper dui sagittis, et varius sem faucibus. Suspendisse iaculis rutrum leo, non tempus odio mollis a. Aliquam dictum iaculis nunc et vestibulum. Donec vitae facilisis erat. Suspendisse ut risus sed ligula tristique condimentum consectetur non odio. Donec augue diam, ultricies eu tincidunt a, venenatis in lectus. Etiam eget nulla blandit, dictum felis et, egestas lacus. Aliquam sit amet elementum enim. </p>
