--- a/index.html
+++ b/index.html
@@ -31,12 +31,14 @@
 							<ul class="nav navbar-nav menu_nav">
 								<li class="nav-item"><a class="nav-link" href="index.html">Blog</a></li>
 								<li class="nav-item"><a class="nav-link" href="index_news.html">News</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Q&A</a></li>
+                <li class="nav-item"><a class="nav-link" href="index_Q.html">Q&A</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Network</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Inbox</a></li>
 								<li class="nav-item"><a class="nav-link" href="#">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-							</ul>
+
+
+              </ul>
 						</div>
 					</div>
 				</nav>
