--- a/index_news.html
+++ b/index_news.html
@@ -32,7 +32,7 @@
 					<li class="nav-item"><a class="nav-link" href="index_news.html">News</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Network</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Inbox</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Q&A</a></li>
+          <li class="nav-item"><a class="nav-link" href="index_Q.html">Q&A</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">About</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
 				</ul>
