--- a/single-blog.html
+++ b/single-blog.html
@@ -40,7 +40,7 @@
                             <ul class="nav navbar-nav menu_nav">
                                 <li class="nav-item"><a class="nav-link" href="index.html">Blog</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">News</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">Q&A</a></li>
+                                <li class="nav-item"><a class="nav-link" href="index_Q.html">Q&A</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">Network</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">Inbox</a></li>
                                 <li class="nav-item"><a class="nav-link" href="#">About</a></li>
