--- a/contact.html
+++ b/contact.html
@@ -37,13 +37,11 @@
                         <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
                             <ul class="nav navbar-nav menu_nav">
                                 <li class="nav-item"><a class="nav-link" href="index.html">Blog</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">News</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">Article</a></li>
-
-                                        <li class="nav-item"><a class="nav-link" href="#">Q&A</a></li>
-                                        <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-
-
+                                <li class="nav-item"><a class="nav-link" href="index_news">News</a></li>
+                                <li class="nav-item"><a class="nav-link" href="index_Q.html">Q&A</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Network</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">Inbox</a></li>
+                                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                                 <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                             </ul>
                         </div>
